# tinker-void

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml
app/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
app/prisma/: schema.prisma
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/meetings/: page.tsx
app/src/app/void/: page.tsx
app/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
app/src/components/audio/: AudioLevelMeter.tsx  AudioSettings.tsx  DeviceSelect.tsx  InCallAudioSettings.tsx  PreJoinAudioSetup.tsx  index.ts  useAudioDevices.ts
app/src/components/media/: MediaSettings.tsx  MediaToggles.tsx  index.ts
app/src/components/player/: MeetingPlayer.tsx
app/src/components/room/: VideoRoom.tsx
app/src/components/ui/: select.tsx
app/src/hooks/: useAudioPlayer.ts
app/src/lib/: admin-auth.ts  claude.ts  deepgram.ts  livekit.ts  prisma.ts  rabbitmq.ts
docs/: DEPLOYMENT.md  TRANSCRIBER.md
scripts/: deploy.sh  setup.sh
services/livekit/: egress.prod.yaml.template  egress.yaml  livekit.prod.yaml.template  livekit.yaml
services/transcriber/: Dockerfile  main.py  requirements.txt
services/transcriber-py/: Dockerfile  requirements.txt
services/transcriber-py/app/: __init__.py  config.py  consumer.py  main.py
services/transcriber-rs/: Cargo.toml  Dockerfile
services/transcriber-rs/src/: config.rs  handlers.rs  main.rs  queue.rs  storage.rs  transcriber.rs
(+36 files in other folders)
