[package]
name = "transcriber-rs"
version = "0.1.0"
edition = "2021"
description = "TinkerVoid Transcription Service using Parakeet V3"

[dependencies]
# Transcription - Parakeet V3 via ONNX Runtime
parakeet-rs = "0.2"

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# S3/MinIO client
rust-s3 = "0.35"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
tempfile = "3"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# HTTP client for callbacks
reqwest = { version = "0.12", features = ["json"] }

# Audio processing (for duration detection)
hound = "3.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
